--- a/app/src/main/res/layout/fragment_first_welcome.xml
+++ b/app/src/main/res/layout/fragment_first_welcome.xml
@@ -44,6 +44,7 @@
                 android:id="@+id/firstWelcomeIntro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/customText"
                 android:text="Platform yang menemukan\n lawan tanding yang baru\n dan seru"
                 android:gravity="center"
                 android:textSize="22dp"/>
@@ -55,6 +56,7 @@
                 android:layout_marginTop="99dp"
                 android:layout_marginBottom="100dp"
                 android:text="MULAI"
+                android:textColor="@color/customWhite"
                 android:backgroundTint="@color/customButton"
                 app:cornerRadius="10dp"/>
         </LinearLayout>
