--- a/app/src/main/res/layout/fragment_second_welcome.xml
+++ b/app/src/main/res/layout/fragment_second_welcome.xml
@@ -47,6 +47,7 @@
                 android:layout_marginTop="100dp"
                 android:layout_marginBottom="100dp"
                 android:text="LANJUT"
+                android:textColor="@color/customWhite"
                 android:backgroundTint="@color/customButton"
                 app:cornerRadius="10dp"/>
         </LinearLayout>
