--- a/app/src/main/res/layout/fragment_third_welcome.xml
+++ b/app/src/main/res/layout/fragment_third_welcome.xml
@@ -46,6 +46,7 @@
                 android:layout_marginTop="100dp"
                 android:layout_marginBottom="100dp"
                 android:text="LANJUT"
+                android:textColor="@color/customWhite"
                 android:backgroundTint="@color/customButton"
                 app:cornerRadius="10dp"/>
         </LinearLayout>
