--- a/app/src/main/res/layout/fragment_user_register.xml
+++ b/app/src/main/res/layout/fragment_user_register.xml
@@ -41,9 +41,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:backgroundTint="@android:color/transparent"
-                    android:textColor="@color/customBlack"
-                    android:hint="Nama Lengkap" />
+                    android:hint="Nama Lengkap"
+                    android:textColor="@color/customBlack" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -56,9 +57,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:backgroundTint="@android:color/transparent"
-                    android:textColor="@color/customBlack"
-                    android:hint="Email" />
+                    android:hint="Email"
+                    android:textColor="@color/customBlack" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,9 +73,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:backgroundTint="@android:color/transparent"
-                    android:textColor="@color/customBlack"
-                    android:hint="Username" />
+                    android:hint="Username"
+                    android:textColor="@color/customBlack" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -86,9 +89,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:backgroundTint="@android:color/transparent"
-                    android:textColor="@color/customBlack"
-                    android:hint="Password" />
+                    android:hint="Password"
+                    android:textColor="@color/customBlack" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -101,9 +105,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:backgroundTint="@android:color/transparent"
-                    android:textColor="@color/customBlack"
-                    android:hint="Konfirmasi Password" />
+                    android:hint="Konfirmasi Password"
+                    android:textColor="@color/customBlack" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -111,16 +116,18 @@
                 app:boxStrokeColor="@color/customText"
                 app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
                 app:startIconTint="@color/customText">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/userRegisterBirthday"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:focusable="false"
-                    android:clickable="true"
                     android:backgroundTint="@android:color/transparent"
-                    android:textColor="@color/customBlack"
-                    android:hint="Tanggal Lahir" />
+                    android:clickable="true"
+                    android:focusable="false"
+                    android:hint="Tanggal Lahir"
+                    android:textColor="@color/customBlack" />
             </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -128,13 +135,31 @@
                 app:boxStrokeColor="@color/customText"
                 app:startIconTint="@color/customText">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/userRegisterGender"
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Jenis Kelamin"
+                    android:textSize="16dp"
+                    android:layout_marginTop="20dp"/>
+
+                <RadioGroup
+                    android:id="@+id/userRegisterRadioGender"
+                    android:checkedButton="@+id/userRegisterMale"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:backgroundTint="@android:color/transparent"
-                    android:textColor="@color/customBlack"
-                    android:hint="Jenis Kelamin" />
+                    android:layout_height="wrap_content">
+                    <RadioButton
+                        android:id="@+id/userRegisterMale"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Laki-laki"
+                        android:textColor="@color/customText"/>
+                    <RadioButton
+                        android:id="@+id/userRegisterFemale"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Perempuan"
+                        android:textColor="@color/customText"/>
+                </RadioGroup>
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -151,23 +176,24 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:text="Sudah punya akun ?"
                 android:textColor="@color/customText"
                 android:textSize="15dp"
-                android:textStyle="italic"
-                android:layout_marginTop="20dp"/>
+                android:textStyle="italic" />
+
             <TextView
                 android:id="@+id/userRegisterToLogin"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_marginBottom="100dp"
                 android:clickable="true"
+                android:gravity="center"
                 android:text="Masuk"
                 android:textColor="@color/customLinkText"
                 android:textSize="15dp"
-                android:textStyle="italic"
-                android:layout_marginBottom="100dp"/>
+                android:textStyle="italic" />
         </LinearLayout>
     </ScrollView>
 
