--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,18 +8,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".menu.MenuActivity">
-
     <fragment
-        android:id="@+id/welcome_nav_host"
+        android:id="@+id/menu_nav_host"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/welcome_nav"
+        app:navGraph="@navigation/menu_nav"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="55dp"
         />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:background="@color/customBackground"
+        app:itemIconTint="@color/customButton"
+        app:itemTextColor="@color/customButton"
+        android:id="@+id/bottomMenuNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/main_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
