--- a/app/src/main/res/navigation/welcome_nav.xml
+++ b/app/src/main/res/navigation/welcome_nav.xml
@@ -16,6 +16,9 @@
     <action
         android:id="@+id/action_global_userActivity"
         app:destination="@id/userActivity" />
+    <action
+        android:id="@+id/action_global_userMenuActivity2"
+        app:destination="@id/menuActivity2" />
     <fragment
         android:id="@+id/firstWelcomeFragment"
         android:name="com.app.playup.welcome.fragments.FirstWelcomeFragment"
@@ -42,5 +45,10 @@
         android:name="com.app.playup.user.UserActivity"
         android:label="activity_user"
         tools:layout="@layout/activity_user" />
+    <activity
+        android:id="@+id/menuActivity2"
+        android:name="com.app.playup.menu.MenuActivity"
+        android:label="activity_menu"
+        tools:layout="@layout/activity_menu" />
 
 </navigation>
