--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,6 +8,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".menu.MenuActivity">
+
+
     <fragment
         android:id="@+id/menu_nav_host"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -21,6 +23,19 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="55dp"
         />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/chatButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="70dp"
+        android:clickable="true"
+        android:backgroundTint="@color/customBackground"
+        android:src="@drawable/ic_icon_chat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:background="@color/customBackground"
         app:itemIconTint="@color/customButton"
