--- a/app/src/main/res/layout/fragment_menu_schedule.xml
+++ b/app/src/main/res/layout/fragment_menu_schedule.xml
@@ -29,7 +29,6 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginBottom="100dp"
                 android:backgroundTint="@color/customLinkText"
                 app:cardCornerRadius="20dp">
 
@@ -43,6 +42,27 @@
                     android:textColor="@color/customWhite"
                     android:textSize="25dp" />
             </com.google.android.material.card.MaterialCardView>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/menuScheduleCreate"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:text="BUAT JADWAL"
+                android:layout_gravity="center"
+                android:textColor="@color/customWhite"
+                android:backgroundTint="@color/customButton"
+                app:cornerRadius="10dp"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/menuScheduleHistory"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:text="LIHAT RIWAYAT PERTANDINGAN"
+                android:layout_gravity="center"
+                android:textColor="@color/customWhite"
+                android:backgroundTint="@color/customButton"
+                android:layout_marginBottom="100dp"
+                app:cornerRadius="10dp"/>
+        
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
