--- a/app/src/main/res/layout/fragment_user_register.xml
+++ b/app/src/main/res/layout/fragment_user_register.xml
@@ -111,7 +111,7 @@
                     android:textColor="@color/customBlack" />
             </com.google.android.material.textfield.TextInputLayout>
 
-           <com.google.android.material.textfield.TextInputLayout
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColorHint="@color/customText"
@@ -121,30 +121,32 @@
                 <com.google.android.material.textview.MaterialTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:text="Jenis Kelamin"
                     android:textColor="@color/customText"
-                    android:textSize="16dp"
-                    android:layout_marginTop="20dp"/>
+                    android:textSize="16dp" />
 
                 <RadioGroup
                     android:id="@+id/userRegisterRadioGender"
-                    android:checkedButton="@+id/userRegisterMale"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:checkedButton="@+id/userRegisterMale">
+
                     <RadioButton
                         android:id="@+id/userRegisterMale"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:buttonTint="@color/customButton"
                         android:text="Laki-laki"
-                        android:textColor="@color/customText"/>
+                        android:textColor="@color/customText" />
+
                     <RadioButton
                         android:id="@+id/userRegisterFemale"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:buttonTint="@color/customButton"
                         android:text="Perempuan"
-                        android:textColor="@color/customText"/>
+                        android:textColor="@color/customText" />
                 </RadioGroup>
             </com.google.android.material.textfield.TextInputLayout>
 
